--- a/frontend/src/components/Home/HeroSection.css
+++ b/frontend/src/components/Home/HeroSection.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:ital,wght@0,100..900;1,100..900&family=Story+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Boldonse&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik+Wet+Paint&family=Sixtyfour+Convergence&family=Zen+Dots&display=swap');
 .hero-container {
-  max-width: 1440px;
+  max-width: 1940px;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -9,14 +9,16 @@
   padding: 24px 0 18px 0;
 }
 .hero-label{
-  max-width: 1140px;
+  max-width: 100%;
   max-height: fit-content;
 }
 .hero-label h2 {
+  padding-top: 0;
   position: relative;
-  font-family: "Story Script", sans-serif;
+  font-family: "Audiowide", sans-serif;
   font-weight: 500;
-  font-size: 118px;
+  font-size: 108px;
+  padding-top: 200px;
   line-height: 1.2;
   z-index: 4;
 }
@@ -28,20 +30,24 @@
   color: 	#A61D00;
 }
 .italy_flag {
-  width: 78px;
-  height: 78px;
-  margin-left: 8px;
+  width: 100%;
+  height: 10px;
+  z-index: 5;
+  position: relative;
 }
 .parallax {
-    background-image: url('../../../public/images/bg-hero.jpg');
-    height: 900px;
+    background-image: url('../../../public/images/bg-first-page.jpg');
+    height: 80vh;
     background-attachment: fixed;
     display: flex;
     justify-content: center;
+    background-size: cover;
+    background-position: center;
     color: #ffffff;
     font-size: 60px;
     align-items: center;
     position: relative;
+    margin-top: 0;
 }
 .parallax .mask {
     position: absolute;
