--- a/backend/app/templates/emails/password_reset.html
+++ b/backend/app/templates/emails/password_reset.html
@@ -26,7 +26,7 @@
             <h1 class="title">Сброс пароля</h1>
         </div>
         
-        <p>Здравствуйте, {{ username }}!</p>
+        <p>Здравствуйте, {{ first_name }}!</p>
         
         <p>Мы получили запрос на сброс пароля для вашей учетной записи в системе AIEducation.</p>
         
