--- a/backend/app/templates/emails/verification_success.html
+++ b/backend/app/templates/emails/verification_success.html
@@ -66,7 +66,7 @@
             <h1 class="title">Email подтвержден!</h1>
         </div>
         
-        <p>Здравствуйте, {{ username }}!</p>
+        <p>Здравствуйте, {{ first_name }}!</p>
         
         <div class="success-box">
             <h3>🎉 Отлично!</h3>
