--- a/backend/app/templates/emails/welcome.html
+++ b/backend/app/templates/emails/welcome.html
@@ -24,7 +24,7 @@
         <div class="header">
             <div class="logo">{{ site_name }}</div>
             <h1 class="welcome-title">Добро пожаловать!</h1>
-            <p class="subtitle">Спасибо за регистрацию, {{ username }}!</p>
+            <p class="subtitle">Спасибо за регистрацию, {{ first_name }}!</p>
         </div>
         
         <div class="content">
